--- a/css/pplpagestyles.css
+++ b/css/pplpagestyles.css
@@ -36,7 +36,7 @@ img{
 }
 .container-card{
     margin: 10% 5%;
-    height: 240px;
+    height: 250px;
     width: 255px;
     box-shadow: 5px 1px 10px black;
     border-radius: 15px;
@@ -44,10 +44,11 @@ img{
 }
 
 .cash-flow{
+    margin-top: 5px;
     line-height: 0;
     margin-left: 10px;
 }
 .game-name{
-
+    margin-top: 5px;
     margin: 3px 10px;
 }
